# smart_agentic_assistant

./: .gitignore  README.md  docker-compose.yml
example_registry/: .dockerignore  Dockerfile  README.md  function_discovery.py  main.py  pyproject.toml
example_registry/functions/: __init__.py  github.py  google_services.py  mailing_list.py  member_desk.py  salesforce.py  slack.py  support.py  web.py
task_agent/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  constant.py  docker-compose.yml  main.py  models.py  pyproject.toml  session_manager.py  task_manager.py  tool_client.py
task_agent/task_data/: session_17202ffe.json  session_4ef38fb8.json  session_fd02053a.json
workflow_core/: .gitignore  README.md  interactive_cli.py  pyproject.toml  run_ui.py  run_ui.sh  run_workflow.py
workflow_core/examples/: __init__.py  interactive_cli.py  run_workflow.py
workflow_core/src/: __init__.py  schema.py
workflow_core/src/agent/: __init__.py  prompts.py  tools.py  workflow_agent.py
workflow_core/src/runtime/: __init__.py  base.py  langgraph_executor.py  node_handlers.py  simple_executor.py
workflow_core/tests/: __init__.py  test_executor.py  test_schema.py
workflow_core/ui/: README.md  __init__.py  app.py
workflow_core/ui/components/: __init__.py  chat_panel.py  node_card.py  workflow_info.py
workflow_core/ui/utils/: __init__.py  loader.py
