[project]
name = "task-agent"
version = "0.1.0"
description = "An intelligent task execution agent with AI-powered planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]

[project.scripts]
task-agent = "app:main"

[tool.uv]
dev-dependencies = []
